Overflow fixed

--- a/style.css
+++ b/style.css
@@ -2,15 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-wrap: break-word;
 }
 
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     scroll-behavior: smooth;
-    overflow-x: hidden;
-
-
 }
 section{
     width: 100%;
@@ -274,12 +272,17 @@ section.sec-2{
 
     .para-tittle p{
         line-height: 2rem !important;
-        font-size: 20px !important;
+        font-size: 18px !important;
     }
 
-    .bio,
+    .bio
     .navbar-brand{
         font-size: 50px !important;
+    }
+
+    .name{
+        line-height: 2rem !important;
+        font-size: 18px !important;
     }
 
     .right-content{
